<?xml version="1.0"?>
<package format="3">
  <name>dualarm_forcecon</name>
  <version>0.0.0</version>
  <description>Dual Arm Force Control - Inverse Kinematics version</description>
  <maintainer email="eunseop@todo.todo">eunseop</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Eigen (ROS2 style) -->
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>
  <depend>tf2_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
