<?xml version="1.0"?>
<package format="3">
  <name>dualarm_forcecon</name>
  <version>0.0.0</version>
  <description>Dual Arm Force Control - std_srvs version</description>
  <maintainer email="eunseop@todo.todo">eunseop</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>libeigen-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>